# AMJax

./: .gitignore  LICENSE  PLAN.md  README.md  generate_logo.py  jax-jax-test.ipynb  main.py  plots.ipynb  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  release.yml  run_tests.yml
amjax/: __init__.py  multilevel.py  params.py  plots.py
amjax/relaxation/: __init__.py  relaxation.py  smoothing.py
benchmarks/: __init__.py  benchmark.ipynb  benchmark_utils.py  config.yaml  latest_summary.json  params.py  plots.py  rss.ipynb  rss.py  run_full_benchmark.sh  solver_benchmark.ipynb  solvers_benchmark.ipynb  update_benchmark_docs.py
docs/: api.md  benchmarks.md  index.md  quickstart.md
results/: ruge_stuben_jacobi_f64_cycleV_vciter100_soliter500_k64_n100_amjax_pcg_vmap.json  ruge_stuben_jacobi_f64_cycleV_vciter100_soliter500_k64_n100_amjax_vmap.json  ruge_stuben_jacobi_f64_cycleV_vciter100_soliter500_k64_n50_amjax_pcg_vmap.json  ruge_stuben_jacobi_f64_cycleV_vciter100_soliter500_k64_n50_amjax_vmap.json  solver_benchmark_smoothed_aggregation.json
src/amjax/: __init__.py  multilevel_jax.py  relaxation_jax.py  smoothing_jax.py
tests/: test_benchmark_docs.py  test_multilevel.py  test_smoother.py  test_solve.py
tests/relaxation/: test_relaxation.py  test_smoothing.py
