[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "amjax"
authors = [
    {email = "vic.boussange@gmail.com", name = "Victor Boussange"}
]
maintainers = [
    {email = "vic.boussange@gmail.com", name = "Victor Boussange"}
]

version = "0.1.0"
description = "JAX Algebraic Multigrid Solvers in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "numpy",
    "pyamg",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
Documentation = "https://github.com/vboussange/AMJax#readme"
Source = "https://github.com/vboussange/AMJax"