[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
docs = [
    "mkdocstrings-python",
    "pymdown-extensions",
    "zensical",
]
dev = [
    "matplotlib>=3.0.0",
]

[project]
name = "amjax"
authors = [
    {email = "vic.boussange@gmail.com", name = "Victor Boussange"},
    {email = "fanny.missillier@epfl.ch", name = "Fanny Missillier"}
]
maintainers = [
    {email = "vic.boussange@gmail.com", name = "Victor Boussange"},
    {email = "fanny.missillier@epfl.ch", name = "Fanny Missillier"}
]

version = "0.0.3"
description = "JAX Algebraic Multigrid Solvers in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.1",
    "numpy>2.0.0",
    "pyamg>=4.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
Documentation = "https://vboussange.github.io/AMJax/"
Source = "https://github.com/vboussange/AMJax"
